--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "embedded-qs-app",
+  "name": "sa-launch-ui",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,13 +11,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
+    "@angular/cdk": "^14.2.6",
+    "@angular/common": "^14.2.8",
     "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
+    "@angular/core": "^14.2.8",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.2.6",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@aws-amplify/cli": "^10.5.1",
+    "@aws-amplify/ui-angular": "^3.1.2",
+    "@ng-select/ng-select": "9.0",
+    "amazon-cognito-identity-js": "^6.0.1",
+    "amazon-quicksight-embedding-sdk": "^1.20.0",
+    "aws-amplify": "^5.0.4",
+    "bootstrap": "^5.2.3",
+    "ngx-bootstrap": "^9.0.0",
+    "ngx-webcam": "^0.4.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
